Cập nhật các cách đặt tàu

--- a/app/templates/game_setup.html
+++ b/app/templates/game_setup.html
@@ -27,11 +27,8 @@
 <button id="randomBtn">Tự đặt tàu</button>
 <select id="strategySelect">
   <option value="random">Ngẫu nhiên</option>
-  <option value="edge">Sát mép bảng</option>
-  <option value="nocorner">Tránh góc</option>
-  <option value="spread">Phân bố đều</option>
-  <option value="cluster">Dồn 1 chỗ (bẫy)</option>
-  <option value="checker_avoid">Tránh caro</option>
+  <option value="avoid mid and corner">Tránh đặt giữa và góc</option>
+  <option value="avoid adjacent">Không đặt kề nhau</option>
 </select>
 
 <p id="status"></p>
